--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
