--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "firebase": "^9.22.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "next": "13.2.4",
